--- a/style.less
+++ b/style.less
@@ -132,6 +132,7 @@ textarea,
     margin: 0;
     padding: 0;
     border: none;
+    overflow: hidden;
     color: @textcolor;
     font-family: 'Roboto', Helvetica, Arial, sans-serif;
     font-size: 18px;
@@ -445,6 +446,27 @@ big {
     }
 
 
+    /* Alert Message */
+
+    .alert-dismissable .close, .alert-dismissible .close {
+        position: relative;
+        top: 0;
+        right: -28px;
+        color: inherit;
+        display: block;
+        margin: 0;
+        background: 0 0;
+        font-size: 1.6em;
+        line-height: 0;
+    }
+
+    .alert-success {
+        border: 0;
+        border-radius: 0;
+        color: #222;
+    }
+
+
     button,
     input[type="button"],
     input[type="reset"],
@@ -643,12 +665,97 @@ svg {
 
 
 
+@a: 0.7s;
+
+
+.view-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0);
+    visibility: hidden;
+
+
+    -webkit-transition: background @a;
+    -moz-transition: background @a;
+    transition: background @a;
+
+
+    .container {
+        height: 100%;
+        position: relative;
+    }
+
+
+    .widget_list {
+
+
+        h4 {
+            opacity: 0;
+
+            -webkit-transition: opacity @a 0.7s;
+            -moz-transition: opacity @a 0.7s;
+            transition: opacity @a 0.7s;
+        }
+
+        ul {
+            opacity: 0;
+
+            -webkit-transition: opacity @a 0.7s;
+            -moz-transition: opacity @a 0.7s;
+            transition: opacity @a 0.7s;
+
+        }
+
+    }
+
+    .widget_list.show {
+
+
+        h4 {
+            opacity: 1;
+
+            -webkit-transition: opacity @a 1.7s;
+            -moz-transition: opacity @a 1.7s;
+            transition: opacity @a 1.7s;
+        }
+
+        ul {
+            opacity: 1;
+
+            -webkit-transition: opacity @a 1.7s;
+            -moz-transition: opacity @a 1.7s;
+            transition: opacity @a 1.7s;
+
+        }
+
+    }
+
+
+}
+
+
+.view-container.show {
+
+    visibility: visible;
+    background: rgba(0, 0, 0, 0.3);
+
+    -webkit-transition: background @a;
+    -moz-transition: background @a;
+    transition: background @a;
+}
+
+
+
 @tY: 0px;
 
 @tS: 0.9;
 
 @o: 0.2s; 
-
 
 
 .main .widget_list_container {
@@ -670,8 +777,7 @@ svg {
     margin: 0!important;
     position: relative;
     z-index: 10;
-    margin-top: 1em!important;
-    margin-left: 0em!important;
+    margin: 0em 0 1em!important;
     overflow: hidden;
     border-radius: 2px;
     -webkit-transition: box-shadow 0.5s, background 0.5s;
@@ -691,6 +797,50 @@ svg {
         margin: 0;
         cursor: pointer;
         position: relative;
+
+        .list-icon {
+            font-size: 1.4em;
+            line-height: 0;
+            position: absolute;
+            right: 18px;
+            top: 50%;
+            -webkit-transition: -webkit-transform 0.3s;
+            -moz-transition: -moz-transform 0.3s;
+            transition: transform 0.3s;
+            -webkit-transform: rotate(-180deg);
+            -moz-transform: rotate(-180deg);
+            -ms-transform: rotate(-180deg);
+            -o-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+            color: @textcolor;
+
+
+        }
+
+        .list-icon {
+
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+
+            -webkit-transform: rotate(0deg);
+            -moz-transform: rotate(0deg);
+            -ms-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+
+            -webkit-transition: -webkit-transform 0.3s;
+            -moz-transition: -moz-transform 0.3s;
+            transition: transform 0.3s;
+
+            i {
+                line-height: 0; 
+                position: relative;
+                float: left;
+            }
+
+        }
+
+
     }
 
 
@@ -754,6 +904,11 @@ svg {
         border: 0;
         padding: 0.6em 0 0;
     }
+
+
+
+
+
 }
 
 
@@ -1936,7 +2091,7 @@ div.front_main_area {
 }
 
 body.pictured {
-    height: 100%;
+
     #skin_wrapper {
         display: table;
         width: 100%;
