--- a/style.less
+++ b/style.less
@@ -668,77 +668,6 @@ svg {
 @a: 0.7s;
 
 
-.view-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: 1000;
-    background: rgba(0, 0, 0, 0);
-    visibility: hidden;
-
-
-    -webkit-transition: background @a;
-    -moz-transition: background @a;
-    transition: background @a;
-
-
-    .container {
-        height: 100%;
-        position: relative;
-    }
-
-
-    .widget_list {
-
-
-        h4 {
-            opacity: 0;
-
-            -webkit-transition: opacity @a 0.7s;
-            -moz-transition: opacity @a 0.7s;
-            transition: opacity @a 0.7s;
-        }
-
-        ul {
-            opacity: 0;
-
-            -webkit-transition: opacity @a 0.7s;
-            -moz-transition: opacity @a 0.7s;
-            transition: opacity @a 0.7s;
-
-        }
-
-    }
-
-    .widget_list.show {
-
-
-        h4 {
-            opacity: 1;
-
-            -webkit-transition: opacity @a 1.7s;
-            -moz-transition: opacity @a 1.7s;
-            transition: opacity @a 1.7s;
-        }
-
-        ul {
-            opacity: 1;
-
-            -webkit-transition: opacity @a 1.7s;
-            -moz-transition: opacity @a 1.7s;
-            transition: opacity @a 1.7s;
-
-        }
-
-    }
-
-
-}
-
-
 .view-container.show {
 
     visibility: visible;
@@ -748,219 +677,344 @@ svg {
     -moz-transition: background @a;
     transition: background @a;
 }
-
-
-
 @tY: 0px;
 
 @tS: 0.9;
 
 @o: 0.2s; 
+.view-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0);
+
+    visibility: hidden;
+
+    -webkit-transition: background @a;
+    -moz-transition: background @a;
+    transition: background @a;
 
 
-.main .widget_list_container {
+    .container {
+        height: 100%;
+        position: relative;
+        text-align: center;
+    }
+
+
+    .widget_list {
+
+        position: relative;
+        display: none;
+        margin-top: 4em;
+        width: 80%;
+        box-shadow: 0 2px 5px -1px rgba(0,0,0,.4);
+        background: #fff;
+        padding: 2em;
+        text-align: left;
+        visibility: hidden;
+
+        h2 {
+            font-size: 2.0em;
+            font-weight: 300;
+            padding-bottom: 1em;
+            color: @primarycolor;
+
+
+            .close-trigger {
+                position: absolute;
+                width: 30px;
+                height: 30px;
+                margin: 0.6em;
+                right: 0;
+                top: 0;
+                cursor: pointer;
+                z-index: 3;
+                -webkit-transform: scale(1.0);
+                -moz-transform: scale(1.0);
+                -ms-transform: scale(1.0);
+                -o-transform: scale(1.0);
+                transform: scale(1.0);
+
+                -webkit-transition: -webkit-transform 0.5s;
+                -moz-transition: -moz-transform 0.5s;
+                transition: transform 0.5s;
+            }
+            .close-trigger:hover {
+                -webkit-transform: scale(1.1);
+                -moz-transform: scale(1.1);
+                -ms-transform: scale(1.1);
+                -o-transform: scale(1.1);
+                transform: scale(1.1);
+
+                -webkit-transition: -webkit-transform 0.5s;
+                -moz-transition: -moz-transform 0.5s;
+                transition: transform 0.5s;
+            }
+
+            .close-trigger:before {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 50%;
+                width: 100%;
+                height: 2px;
+                background: #666;
+
+                -webkit-backface-visibility: hidden;
+                backface-visibility: hidden;
+                -webkit-transform: rotate(45deg);
+                -moz-transform: roatate(45deg);
+                -ms-transform: roatate(45deg);
+                -o-transform: roatate(45deg);
+                transform: roatate(45deg);
+
+            }
+            .close-trigger:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 50%;
+                width: 100%;
+                height: 2px;
+                background: #666;
+
+                -webkit-backface-visibility: hidden;
+                backface-visibility: hidden;
+                -webkit-transform: rotate(-45deg);
+                -moz-transform: roatate(-45deg);
+                -ms-transform: roatate(-45deg);
+                -o-transform: roatate(-45deg);
+                transform: roatate(-45deg);
+            }
+
+
+
+        }
+
+
+        h4 {
+            opacity: 1;
+
+            position: relative;
+            padding: 0.6em 0em;
+
+            margin: 0 0.4em;
+            font-size: 1.4em;
+            font-weight: 300;
+            border-bottom: 1px solid #eee;
+            color: @primarycolor;
+
+            -webkit-transform: translateY(@tY) scale(@tS);
+            -moz-transform: translateY(@tY) scale(@tS);
+            -o-transform: translateY(@tY) scale(@tS);
+            -ms-transform: translateY(@tY) scale(@tS);
+            transform: translateY(@tY) scale(@tS);
+
+            transform-origin: 0 0;
+            -webkit-transition: -webkit-transform 0.5s, opacity @o;
+            -moz-transition: -moz-transform 0.5s, opacity @o;
+            transition: transform 0.5s, opacity @o;
+        }
+
+        ul {
+
+            opacity: 1;
+
+            position: relative;
+            padding: 0 1.6em;
+
+            transform-origin: 0 0;
+            -webkit-transform: translateY(@tY) scale(@tS);
+            -moz-transform: translateY(@tY) scale(@tS);
+            -o-transform: translateY(@tY) scale(@tS);
+            -ms-transform: translateY(@tY) scale(@tS);
+            transform: translateY(@tY) scale(@tS);
+            -webkit-transition: -webkit-transform 0.5s, opacity @o;
+            -moz-transition: -moz-transform 0.5s, opacity @o;
+            transition: transform 0.5s, opacity @o;
+            list-style: none;
+        }
+
+        ul {
+            margin-left: 0;
+        }
+
+        li {
+            margin: 0;
+            padding: 0.6em 0;
+            border-bottom: 1px solid @divider;
+            list-style: none;
+            font-size: 1.1em;
+        }
+        li:last-child {
+            border: 0;
+        }
+        li ul {
+            border-top: 1px solid @divider;
+            margin-top: 0.6em;
+            margin-left: 0;
+            padding-left: 2em;
+        }
+        li ul li:last-child {
+            border: 0;
+            padding: 0.6em 0 0;
+        }
+
+
+
+    }
+
+    .widget_list.show {
+        visibility: visible;
+        display: inline-block !important;
+
+        h4 {
+            opacity: 1;
+
+            -webkit-transition: opacity @a 0.7s;
+            -moz-transition: opacity @a 0.7s;
+            transition: opacity @a 0.7s;
+        }
+
+        ul {
+            opacity: 1;
+
+            -webkit-transition: opacity @a 0.7s;
+            -moz-transition: opacity @a 0.7s;
+            transition: opacity @a 0.7s;
+
+        }
+
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+.front_main_content .widget[class$="list"] {
+    visibility: hidden;
+    opacity: 0;
+}
+
+
+.main .widget_lists_container {
     float: left;
     min-height: 400px;
     position: relative;
-}
-
-.main .widget_list {
 
 
 
+    .widget_list:hover {
 
-    display: block;
+        box-shadow: 0px 2px 12px -1px rgba(174, 174, 174, 0.6);
+        box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.4);
 
-    min-width: 36%;
-    max-width: 40%;
+        -webkit-transition: box-shadow 0.5s;
+        -moz-transition: box-shadow 0.5s;
+        transition: box-shadow 0.5s;
+    }
 
-    margin: 0!important;
-    position: relative;
-    z-index: 10;
-    margin: 0em 0 1em!important;
-    overflow: hidden;
-    border-radius: 2px;
-    -webkit-transition: box-shadow 0.5s, background 0.5s;
-    -moz-transition: box-shadow 0.5s, background 0.5s;
-    transition: box-shadow 0.5s, background 0.5s;
 
-    /*box-shadow: 0px 2px 1px -1px rgba(174, 174, 174, 0.6);*/
-    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.4);
-    background: rgba(255, 255, 255, 1);
+    .widget_list {
 
-    >h2 {
-        font-weight: 300;
-        font-size: 1.3em;
-        /*background: #fff;*/
-        color: @primarycolor;
-        padding: 1em 1.4em;
-        margin: 0;
-        cursor: pointer;
+        display: block;
+
+        min-width: 36%;
+        max-width: 40%;
+
+        margin: 0!important;
         position: relative;
+        z-index: 10;
+        margin: 0em 0 1em!important;
+        overflow: hidden;
+        border-radius: 2px;
 
-        .list-icon {
-            font-size: 1.4em;
-            line-height: 0;
-            position: absolute;
-            right: 18px;
-            top: 50%;
-            -webkit-transition: -webkit-transform 0.3s;
-            -moz-transition: -moz-transform 0.3s;
-            transition: transform 0.3s;
-            -webkit-transform: rotate(-180deg);
-            -moz-transform: rotate(-180deg);
-            -ms-transform: rotate(-180deg);
-            -o-transform: rotate(-180deg);
-            transform: rotate(-180deg);
-            color: @textcolor;
+        background: #fff;
 
 
-        }
+        opacity: 0;
 
-        .list-icon {
 
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
+        -webkit-transition: box-shadow 0.5s;
+        -moz-transition: box-shadow 0.5s;
+        transition: box-shadow 0.5s;
 
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -ms-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
-            transform: rotate(0deg);
+        /*box-shadow: 0px 2px 1px -1px rgba(174, 174, 174, 0.6);*/
+        box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.4);
 
-            -webkit-transition: -webkit-transform 0.3s;
-            -moz-transition: -moz-transform 0.3s;
-            transition: transform 0.3s;
+        >h2 {
+            font-weight: 300;
+            font-size: 1.3em;
+            /*background: #fff;*/
+            color: @primarycolor;
+            padding: 1em 1.4em;
+            margin: 0;
+            cursor: pointer;
+            position: relative;
 
-            i {
-                line-height: 0; 
-                position: relative;
-                float: left;
+            .list-icon {
+                font-size: 1.4em;
+                line-height: 0;
+                position: absolute;
+                right: 18px;
+                top: 50%;
+
+                color: @textcolor;
+
+                -webkit-backface-visibility: hidden;
+                backface-visibility: hidden;
+
+                -webkit-transform: rotate(-90deg);
+                -moz-transform: rotate(-90deg);
+                -ms-transform: rotate(-90deg);
+                -o-transform: rotate(-90deg);
+                transform: rotate(-90deg);
+
+                i {
+                    line-height: 0; 
+                    position: relative;
+                    float: left;
+                }
+
             }
 
+
         }
 
 
     }
 
 
-    .list_container {
-        display: inline-block;
-        float: left;
-    }
+    .widget_list.animate {
 
-    h4 {
-        position: relative;
-        padding: 0.6em 0em;
-        margin: 0 1.6em;
-        opacity: 0;
-        -webkit-transform: translateY(@tY) scale(@tS);
-        -moz-transform: translateY(@tY) scale(@tS);
-        -o-transform: translateY(@tY) scale(@tS);
-        -ms-transform: translateY(@tY) scale(@tS);
-        transform: translateY(@tY) scale(@tS);
-        transform-origin: 0 0;
-        -webkit-transition: -webkit-transform 0.5s, opacity @o;
-        -moz-transition: -moz-transform 0.5s, opacity @o;
-        transition: transform 0.5s, opacity @o;
-    }
-
-    ul {
-        position: relative;
-        padding: 0 2.6em;
-        opacity: 0;
-        transform-origin: 0 0;
-        -webkit-transform: translateY(@tY) scale(@tS);
-        -moz-transform: translateY(@tY) scale(@tS);
-        -o-transform: translateY(@tY) scale(@tS);
-        -ms-transform: translateY(@tY) scale(@tS);
-        transform: translateY(@tY) scale(@tS);
-        -webkit-transition: -webkit-transform 0.5s, opacity @o;
-        -moz-transition: -moz-transform 0.5s, opacity @o;
-        transition: transform 0.5s, opacity @o;
-        list-style: none;
-    }
-
-    ul {
-        margin-left: 0;
-    }
-
-    li {
-        margin: 0;
-        padding: 0.6em 0;
-        border-bottom: 1px solid @divider;
-        list-style: none;
-    }
-    li:last-child {
-        border: 0;
-    }
-    li ul {
-        border-top: 1px solid @divider;
-        margin-top: 0.6em;
-        margin-left: 0;
-        padding-left: 2em;
-    }
-    li ul li:last-child {
-        border: 0;
-        padding: 0.6em 0 0;
-    }
-
-
-
-
-
-}
-
-
-.main .widget_list.show {
-    -webkit-transition: box-shadow 0.5s, background 0.5s;
-    -moz-transition: box-shadow 0.5s, background 0.5s;
-    transition: box-shadow 0.5s, background 0.5s;
-
-    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.4);
-    background: rgba(255, 255, 255, 1);
-
-    h4 {
-        position: relative;
+        visibility: visible;
         opacity: 1;
-        -webkit-transform: translateY(0) scale(1);
-        -moz-transform: translateY(0) scale(1);
-        -o-transform: translateY(0) scale(1);
-        -ms-transform: translateY(0) scale(1);
-        transform: translateY(0) scale(1);
-        -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
-        -moz-transition: -moz-transform 0.5s, opacity 0.5s;
-        transition: transform 0.5s, opacity 0.5s;
+
+        -webkit-transition: box-shadow 0.5s, visibility 0s 1s, opacity 1.5s 1s;
+        -moz-transition: box-shadow 0.5s, visibility 0s 1s, opacity 1.5s 1s;
+        transition: box-shadow 0.5s, visibility 0s 1s, opacity 1.5s 1s;
     }
-    ul {
-        position: relative;
-        opacity: 1;
-        -webkit-transform: translateY(0) scale(1);
-        -moz-transform: translateY(0) scale(1);
-        -o-transform: translateY(0) scale(1);
-        -ms-transform: translateY(0) scale(1);
-        transform: translateY(0) scale(1);
 
-        -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
-        -moz-transition: -moz-transform 0.5s, opacity 0.5s;
-        transition: transform 0.5s, opacity 0.5s;
-    }
+
 }
 
 
-.main .widget_list:hover {
 
-    box-shadow: 0px 2px 12px -1px rgba(174, 174, 174, 0.6);
-    box-shadow: 0 2px 12px -1px rgba(0, 0, 0, 0.4);
 
-    -webkit-transition: box-shadow 0.5s;
-    -moz-transition: box-shadow 0.5s;
-    transition: box-shadow 0.5s;
-}
-
-.main .widget_list ul li:last-child {
-    padding: 0 0 1em;
-}
 
 
 
@@ -1338,58 +1392,104 @@ svg {
 /* Search Widget */ 
 
 
-.widget_core_coll_search_form {
+.main .widget_core_coll_search_form {
+    padding: 4em;
+    background: #F7F7F7;
+    box-shadow: 0 2px 5px -1px rgba(0,0,0,.6);
+    position: relative;
+
+    @htY1: 46px;
+    @htY2: 30px;
+    @hts: 0.3s;
 
     h2.page-header {
-        display: inline-block;
-        background: transparent!important;
-        color: #666 !important;
+        background: 0 0!important;
+        color: @primarycolor !important;
         box-shadow: 0 0 0!important;
+        padding: 0;
+        margin: 0;
+        font-size: 1.6em !important;
+        line-height: 1.6em !important;
+
+        z-index: 2;
+        position: absolute;
+        top: 1em;
+
+        -webkit-transform: translateY(@htY1);
+        -moz-transform: translateY(@htY1);
+        -ms-transform: translateY(@htY1);
+        -o-transform: translateY(@htY1);
+        transform: translateY(@htY1);
+
+        -webkit-transition: -webkit-transform @hts, font-size @hts;
+        -moz-transition: -moz-transform @hts, font-size @hts;
+        transition: transform @hts, font-size @hts;
+
     }
+
+
+
+    h2.page-header.label-hide {
+
+        font-size: 1.0em !important;
+
+        -webkit-transform: translateY(@htY2);
+        -moz-transform: translateY(@htY2);
+        -ms-transform: translateY(@htY2);
+        -o-transform: translateY(@htY2);
+        transform: translateY(@htY2);
+
+        -webkit-transition: -webkit-transform @hts, font-size @hts;
+        -moz-transition: -moz-transform @hts, font-size @hts;
+        transition: transform @hts, font-size @hts;
+    }
+
 
     form {
         display: inline-block;
         position: relative;
-        box-shadow: 0 1px 6px -2px rgba(0,0,0,.45);
-        border-radius: 2px;
+        border-radius: 0px;
+        width: 100%;
+        z-index: 2;
 
         input[type=text] {
             color: #666;
             outline: 0;
             height: auto;
             border: 0;
+            font-size: 1.4em;
+            font-weight: 300;
             border-radius: 0;
-            background: #fff;
-            padding: 1.2em;
+            background: transparent;
+            padding: 0.4em 0 0.4em;
             box-shadow: 0 0 0;
             margin: 0;
-            width: auto !important;
+            width: 100%!important;
             display: inline-block;
+            border-bottom: 2px solid rgba(0,0,0,.6);
         }
+        input[type=text]:focus {
+            border-bottom: 2px solid @primarycolor;
+        }
+
+
 
         input[type=submit] {
-            color: transparent;
             height: 100%;
+            background: rgba(0, 0, 0, 0.06);
+            border: 0;
+            border-radius: 0;
             padding: 0;
-            width: 2.8em;
-            margin: 0;
-
-        }
-
-        .compact_search_form::after {
-            font-family: Fontawesome;
-            -webkit-font-smoothing: antialiased;
-            content: '\f002';
-            text-shadow: 0 1px 2px #A1A1A1;
-            color: #666;
-            font-size: 1.4em;
             position: absolute;
-            right: .6em;
-            bottom: 0.6em;
-            border-left: 1px solid #F3F3F3;
-            padding-left: 11px;
+            right: 0;
+            bottom: 0.2em;
+            display: none;
+
         }
+
+
     }
+
 
 
 
